dpkg (1.18.23) UNRELEASED; urgency=medium

  * Handle unmatched arch-qualified virtual packages in dpkg-genbuildinfo,
    instead of letting perl die. Closes: #849944
  * Declare .buildinfo format as stable with version 1.0.
  * Perl modules:
    - Do not special case EM_SPARC32PLUS for NetBSD in Dpkg::Shlibs::Objdump,
      the code has been fixed in NetBSD as that situation could not happen.
  * Documentation:
    - Clarify the requirements for deb-conffile(5) pathnames. Closes: #854417
      Proposed by Dieter Adriaenssens <dieter.adriaenssens@gmail.com>.
    - Document dpkg-source --before-build and --after-build in --help output.
    - Document dpkg-buildpackage --ignore-builtin-builddeps in --help output.

 -- Guillem Jover <guillem@debian.org>  Wed, 01 Feb 2017 06:28:28 +0100

dpkg (1.18.22) unstable; urgency=medium

  [ Guillem Jover ]
  * Turn status file parser errors on bogus field blank lines into warnings,
    otherwise the system cannot be easily recovered from. Regression
    introduced in dpkg 1.16.1. Reported by Jay Freeman <saurik@saurik.com>.
  * Perl modules:
    - Mask ARM ABI bits in the ELF processor flags in Dpkg::Shlibs::Objdump.
      These are too unreliable to be used for exact matching. Closes: #853793

  [ Updated programs translations ]
  * Turkish (Mert Dirik). Closes: #853202

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Wed, 01 Feb 2017 05:48:58 +0100

dpkg (1.18.21) unstable; urgency=medium

  [ Guillem Jover ]
  * Revert "Generate Testsuite-Restrictions fields from the test restrictions
    in dpkg-source into .dsc files". This change is contentious and should
    have been discussed more widely. Given that this has been live only for
    a couple of days, the impact should be minimal, but still something to
    take into account once and if this gets reintroduced. Closes: #852820
  * Perl modules: